Lazarus_Athena/include/Intrinsic.pas

procedure XtGetValues(para1:TWidget; para2:TArgList; para3:TCardinal);cdecl;external;
    { widget  }    {333333333333333333333333333333333******************************** }procedure XtVaGetValues(para1:TWidget; args:array of const);cdecl;external;
procedure XtVaGetValues(para1:TWidget);cdecl;external;
    { base  }    { resources  }    { num_resources  }    { args  }    { num_args  }
procedure XtSetSubvalues(para1:TXtPointer; para2:TXtResourceList; para3:TCardinal; para4:TArgList; para5:TCardinal);cdecl;external;
    { base  }    { resources  }    { num_resources  }    {333333333333333333333333333333333******************************** }procedure XtVaSetSubvalues(para1:TXtPointer; para2:TXtResourceList; para3:TCardinal; args:array of const);cdecl;external;
procedure XtVaSetSubvalues(para1:TXtPointer; para2:TXtResourceList; para3:TCardinal);cdecl;external;
    { base  }    { resources  }    { num_resources  }    { args  }    { num_args  }
procedure XtGetSubvalues(para1:TXtPointer; para2:TXtResourceList; para3:TCardinal; para4:TArgList; para5:TCardinal);cdecl;external;
    { base  }    { resources  }    { num_resources  }    {333333333333333333333333333333333******************************** }procedure XtVaGetSubvalues(para1:TXtPointer; para2:TXtResourceList; para3:TCardinal; args:array of const);cdecl;external;
procedure XtVaGetSubvalues(para1:TXtPointer; para2:TXtResourceList; para3:TCardinal);cdecl;external;
    { widget_class  }    { resources_return  }    { num_resources_return  }
procedure XtGetResourceList(para1:TWidgetClass; para2:PXtResourceList; para3:PCardinal);cdecl;external;
    { widget_class  }    { resources_return  }    { num_resources_return  }
procedure XtGetConstraintResourceList(para1:TWidgetClass; para2:PXtResourceList; para3:PCardinal);cdecl;external;
    { was #define dname def_expr }
    function XtUnspecifiedPixmap : TPixmap;      

    const
      XtUnspecifiedShellInt = -(1);      

    { was #define dname def_expr }
    function XtUnspecifiedWindow : TWindow;      

    { was #define dname def_expr }
    function XtUnspecifiedWindowGroup : TWindow;      

    const
      XtCurrentDirectory = 'XtCurrentDirectory';      
      XtDefaultForeground = 'XtDefaultForeground';      
      XtDefaultBackground = 'XtDefaultBackground';      
      XtDefaultFont = 'XtDefaultFont';      
      XtDefaultFontSet = 'XtDefaultFontSet';      
    { was #define dname(params) para_def_expr }
    { argument types are unknown }

    function XtOffset(p_type,field : longint) : TCardinal;    

{$ifdef offsetof}
    { was #define dname(params) para_def_expr }
    { argument types are unknown }
    { return type might be wrong }   
    function XtOffsetOf(s_type,field : longint) : longint;    

{$else}
(* error 
#define XtOffsetOf(s_type,field) XtOffset(s_type*,field)
in define line 1675 *)
{$endif}
    {************************************************************
     *
     * Session Management
     *
     *********************************************************** }
    { return  }
    { return  }
    { return  }
    { return  }
    { implementation private  }
    { implementation private  }
    type
      PXtCheckpointTokenRec = ^TXtCheckpointTokenRec;
      TXtCheckpointTokenRec = record
          save_type : longint;
          interact_style : longint;
          shutdown : TBoolean;
          fast : TBoolean;
          cancel_shutdown : TBoolean;
          phase : longint;
          interact_dialog_type : longint;
          request_cancel : TBoolean;
          request_next_phase : TBoolean;
          save_success : TBoolean;
          _type : longint;
          widget : TWidget;
        end;
      TXtCheckpointToken = PXtCheckpointTokenRec;
      PXtCheckpointToken = ^TXtCheckpointToken;
    { widget  }

function XtSessionGetToken(para1:TWidget):TXtCheckpointToken;cdecl;external;
    { token  }
procedure XtSessionReturnToken(para1:TXtCheckpointToken);cdecl;external;
    {************************************************************
     *
     * Error Handling
     *
     *********************************************************** }
    { app_context  }    { handler  }function XtAppSetErrorMsgHandler(para1:TXtAppContext; _X_NORETURN:TXtErrorMsgHandler):TXtErrorMsgHandler;cdecl;external;
    { obsolete  }
    { handler  }procedure XtSetErrorMsgHandler(_X_NORETURN:TXtErrorMsgHandler);cdecl;external;
    { app_context  }    { handler  }
function XtAppSetWarningMsgHandler(para1:TXtAppContext; para2:TXtErrorMsgHandler):TXtErrorMsgHandler;cdecl;external;
    { obsolete  }
    { handler  }
procedure XtSetWarningMsgHandler(para1:TXtErrorMsgHandler);cdecl;external;
    { app_context  }    { name  }    { type  }    { class  }    { default  }    { params  }    { num_params  }
(* error 
) _X_NORETURN;
 in declarator_list *)
      var
 : pointer;
    { obsolete  }
    { name  }    { type  }    { class  }    { default  }    { params  }    { num_params  }
(* error 
) _X_NORETURN;
 in declarator_list *)
 : pointer;
    { app_context  }    { name  }    { type  }    { class  }    { default  }    { params  }    { num_params  }

procedure XtAppWarningMsg(para1:TXtAppContext; _XtString:TXconst; _XtString:TXconst; _XtString:TXconst; _XtString:TXconst; 
                para6:PString; para7:PCardinal);cdecl;external;
    { obsolete  }
    { name  }    { type  }    { class  }    { default  }    { params  }    { num_params  }
procedure XtWarningMsg(_XtString:TXconst; _XtString:TXconst; _XtString:TXconst; _XtString:TXconst; para5:PString; 
                para6:PCardinal);cdecl;external;
    { app_context  }    { handler  }function XtAppSetErrorHandler(para1:TXtAppContext; _X_NORETURN:TXtErrorHandler):TXtErrorHandler;cdecl;external;
    { obsolete  }
    { handler  }procedure XtSetErrorHandler(_X_NORETURN:TXtErrorHandler);cdecl;external;
    { app_context  }    { handler  }
function XtAppSetWarningHandler(para1:TXtAppContext; para2:TXtErrorHandler):TXtErrorHandler;cdecl;external;
    { obsolete  }
    { handler  }
procedure XtSetWarningHandler(para1:TXtErrorHandler);cdecl;external;
    { app_context  }    { message  }
(* error 
) _X_NORETURN;
 in declarator_list *)
      var
 : pointer;
    { obsolete  }
    { message  }
(* error 
) _X_NORETURN;
 in declarator_list *)
 : pointer;
    { app_context  }    { message  }

procedure XtAppWarning(para1:TXtAppContext; _XtString:TXconst);cdecl;external;
    { obsolete  }
    { message  }
procedure XtWarning(_XtString:TXconst);cdecl;external;
    { app_context  }
function XtAppGetErrorDatabase(para1:TXtAppContext):PXrmDatabase;cdecl;external;
    { obsolete  }
function XtGetErrorDatabase:PXrmDatabase;cdecl;external;
    { app_context  }    { name  }    { type  }    { class  }    { default  }    { buffer_return  }    { nbytes  }    { database  }
procedure XtAppGetErrorDatabaseText(para1:TXtAppContext; _XtString:TXconst; _XtString:TXconst; _XtString:TXconst; _XtString:TXconst; 
                para6:TXtString; para7:longint; para8:TXrmDatabase);cdecl;external;
    { obsolete  }
    { name  }    { type  }    { class  }    { default  }    { buffer_return  }    { nbytes  }
procedure XtGetErrorDatabaseText(_XtString:TXconst; _XtString:TXconst; _XtString:TXconst; _XtString:TXconst; para5:TXtString; 
                para6:longint);cdecl;external;
    {***************************************************************
     *
     * Memory Management
     *
     *************************************************************** }
    { size  }
function XtMalloc(para1:TCardinal):Pchar;cdecl;external;
    { num  }    { size  }
function XtCalloc(para1:TCardinal; para2:TCardinal):Pchar;cdecl;external;
    { ptr  }    { num  }
function XtRealloc(para1:Pchar; para2:TCardinal):Pchar;cdecl;external;
    { ptr  }
procedure XtFree(para1:Pchar);cdecl;external;
{$ifndef _X_RESTRICT_KYWD}
{$define _X_RESTRICT_KYWD}    
{$endif}
(* error 
    _Xconst char * _X_RESTRICT_KYWD format,
(* error 
    ...
(* error 
) _X_ATTRIBUTE_PRINTF(2,3);
 in declarator_list *)
 in declarator_list *)
 in declarator_list *)
{$ifdef XTTRACEMEMORY}
    { implementation-private  }
    { size  }(* Const before type ignored *)
    { file  }    { line  }

function _XtMalloc(para1:TCardinal; para2:Pchar; para3:longint):Pchar;cdecl;external;
    { implementation-private  }
    { ptr  }    { size  }(* Const before type ignored *)
    { file  }    { line  }
function _XtRealloc(para1:Pchar; para2:TCardinal; para3:Pchar; para4:longint):Pchar;cdecl;external;
    { implementation-private  }
    { num  }    { size  }(* Const before type ignored *)
    { file  }    { line  }
function _XtCalloc(para1:TCardinal; para2:TCardinal; para3:Pchar; para4:longint):Pchar;cdecl;external;
    { implementation-private  }
    { ptr  }
procedure _XtFree(para1:Pchar);cdecl;external;
    { implementation-private  }
    { ptr  }function _XtIsValidPointer(para1:Pchar):TBoolean;cdecl;external;
    { implementation-private  }
(* Const before type ignored *)
    { filename  }procedure _XtPrintMemory(para1:Pchar);cdecl;external;
    { was #define dname(params) para_def_expr }
    { argument types are unknown }
    { return type might be wrong }   
    function XtMalloc(size : longint) : longint;    

    { was #define dname(params) para_def_expr }
    { argument types are unknown }
    { return type might be wrong }   
    function XtRealloc(ptr,size : longint) : longint;    

    { was #define dname(params) para_def_expr }
    { argument types are unknown }
    { return type might be wrong }   
    function XtCalloc(num,size : longint) : longint;    

    { was #define dname(params) para_def_expr }
    { argument types are unknown }
    { return type might be wrong }   
    function XtFree(ptr : longint) : longint;    

{$endif}
    { ifdef XTTRACEMEMORY  }
    { was #define dname(params) para_def_expr }
    { argument types are unknown }

    function XtNew(_type : longint) : Ptype;    

{$undef XtNewString}
    { str  }function XtNewString(para1:TString):TString;cdecl;external;
    { was #define dname(params) para_def_expr }
    { argument types are unknown }
    { return type might be wrong }   
    function XtNewString(str : longint) : longint;    
